@@ -1020,7 +1020,7 @@ user's home directory is {\cf /home/tom}), and if not
 found there, will then check the directory \qkw{/shared/plugins}.
 
 The first search path it will check is that stored in the environment
-variable {\cf IMAGEIO_LIBRARY_PATH}.  It will check each directory in
+variable {\cf OPENIMAGEIO_LIBRARY_PATH}.  It will check each directory in
 turn, in the order that they are listed in the variable.  If no adequate
 plugin is found in any of the directories listed in this environment
 variable, then it will check the custom searchpath passed as the
